fixed some aligns

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -51,3 +51,8 @@
 .input-label {
     font-size: 20px;
 }
+
+.radio-index {
+    display: flex;
+    align-items: center;
+}
