--- a/src/main/resources/static/css/sign-up.css
+++ b/src/main/resources/static/css/sign-up.css
@@ -2,6 +2,7 @@
 
 .input-button_sign,
 .input-button_login {
-    width: inherit;
+    width: 300px;
+    align-self: center;
 }
 
